Fix search list item alignment for long city names

--- a/components/Header/SearchOverlay/SearchOverlay.module.css
+++ b/components/Header/SearchOverlay/SearchOverlay.module.css
@@ -56,6 +56,10 @@
   font-size: 1.5rem;
   font-weight: 300;
 
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+
   width: fit-content;
   padding: 0.5rem 1rem;
   margin: 0rem 0rem 0rem auto;
@@ -66,11 +70,12 @@
 }
 
 .search-overlay__result span {
+  display: block;
   padding-right: 0.75rem;
 }
 
 .search-overlay__result svg {
-  display: inline;
+  flex-shrink: 0;
   height: 1rem;
   width: 1rem;
 }
